Review and update ResourceType.java